# CPP-Samples

./: CMakeLists.txt  README.md
src/: BasicRuntimeSettings.cpp  CMakeDefines.txt  CMakeLists.txt  DecodeDPM.cpp  DecodeVideoFrame.cpp  FastReadBarcode.cpp  GetIntermediateResult.cpp  MultiThreadBarcodeReader.c  ReadBarcodeConfidence.cpp  ReadBarcodeDeblur.cpp  ReadBarcodeFromRegion.cpp  ReadBarcodeInvertColor.cpp  SeniorRuntimeSettings.cpp  SimpleBarcodeReader.c  SimpleBarcodeReader.cpp  TextFilter.cpp  complexSetting.cpp
src/resource/: BasicRuntimeSettings.json  FastReadBarcode.json  GetIntermediateResult.json  ReadBarcodeConfidence.json  ReadBarcodeDeblur.json  ReadBarcodeFromRegion.json  ReadBarcodeInvertColor.json  SeniorRuntimeSettings.json  complex.json
